@@ -1,3 +1,9 @@
+1998-05-22  Marcus G. Daniels  <mgd@ute.santafe.edu>
+
+	* gui.h (_ArchivedGeometryWidget): Declare -loadWindowGeometryRecord,
+	-registerAndLoad, +createBegin:, -updateArchiver, -getDestroyedFlag,
+	and -drop.
+
 1998-05-13  Marcus G. Daniels  <mgd@tewa.santafe.edu>
 
 	* gui.h: InputWidget: new protocol.  Make CheckButton and Entry
